CH SIGNUP DOCUMENTATION
- updated the swagger documentation to include that of the signup route
- added password hash and token generator helper
